--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
     
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Design your own dataset"
     />
   
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
